[package]
name = "openapi-context"
version = "0.1.0"
authors = ["Metaswitch Networks Ltd", "dbcfd <bdbrowning2@gmail.com"]
license = "Apache-2.0"
description = ""
homepage = "https://github.com/dbcfd/openapi-context"
repository = "https://github.com/dbcfd/openapi-context"
readme = "README.md"
keywords = ["openapi"]
edition = "2018"

[badges.travis-ci]
repository = "dbcfd/openapi-context"

[features]
default = ["serdejson"]
multipart = ["mime"]
serdejson = ["serde", "serde_json"]

[dependencies]
base64 = "0.10"
mime = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
hyper = "0.12.25"
hyper-tls = "0.2.1"
native-tls = "0.1.4"
openssl = "0.9.14"
slog = { version = "2", features = [ "max_level_trace", "release_max_level_debug"] }
futures = "0.1"
uuid = {version = "0.7", features = ["serde", "v4"]}
hyper-old-types = "0.11.0"
chrono = "0.4.6"

